sort.basic.comb.AlgCombSort.scala.error
Compilation error:
AlgCombSort:3: error: value Int is not a member of Int
  var ecart:Int = getNombreValeurs().Int
                                     ^AlgCombSort:12: error: Boolean does not take parameters
        echange(i,i+ecart)
               ^